syntax = "proto3";

package prime;
option go_package="primepb";

message PrimeRequest {
    int64 num = 1;
}

message PrimeResponse {
    int64 prime = 1;
}

service PrimeService {
    rpc PrimeNumberDecomposition(PrimeRequest) returns (stream PrimeResponse) {}
}